--- a/frontend/index.css
+++ b/frontend/index.css
@@ -1,3 +1,9 @@
+/*
+Author: Abrorjon Asralov
+File: index.css
+Description: This is a file for styling purposes of a login page
+*/
+
 *{
   margin: 0;
   padding: 0;
