--- a/frontend/app/home.css
+++ b/frontend/app/home.css
@@ -18,7 +18,7 @@ body {
     border-bottom: 1px solid #111;
   }
 
-  #site-title {
+  #title {
     font-size: 24px;
     font-weight: bold;
     color: #fff;
