--- a/frontend/app/home.css
+++ b/frontend/app/home.css
@@ -1,63 +1,94 @@
 body {
-    margin: 0;
-    font-family: Arial, sans-serif;
-    background-color: #333;
-    color: #ccc;
-    display: flex;
-    flex-direction: column;
-    height: 100vh;
-  }
+  margin: 0;
+  padding: 0;
+  font-family: Arial, sans-serif;
+  background-color: #333;
+  color: #ccc;
+  display: flex;
+  flex-direction: column;
+  height: 100vh;
+}
 
-  #top-panel {
-    background-color: #222;
-    height: 8vh;
-    display: flex;
-    justify-content: flex-start;
-    align-items: center;
-    padding-left: 20px;
-    border-bottom: 1px solid #111;
-  }
+#mainLogo {
+  width: 5%;
+  border: none;
+  border-radius: 100%;
+}
+#top-panel {
+  position: fixed;
+  left: 0;
+  width: 98%;
+  background-color: #222;
+  height: 9vh;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 0 1%;
+  border-bottom: 1px solid #111;
+}
 
-  #title {
-    font-size: 24px;
-    font-weight: bold;
-    color: #fff;
-    margin-right: 20px;
-  }
+#title {
+  font-size: 24px;
+  font-weight: bold;
+  color: #fff;
+  display: flex;
+  align-items: center;
+  justify-content: left;
+  gap: 1%;
+  width: 60%;
+}
 
-  #search-box {
-    width: 40%;
-    height: 2.5vh;
-    padding: 8px;
-    border: 1px solid #111;
-    border-radius: 5px;
-  }
+#search-box {
+  width: 100%;
+  height: 2.5vh;
+  padding: 8px;
+  border: 1px solid #111;
+  border-radius: 30px 30px 30px 30px;
+}
 
-  #main-container {
-    display: flex;
-    flex: 1;
-  }
+#main-container {
+  display: flex;
+  flex: 1;
+}
 
-  #side-panel {
-    position: fixed;
-    left: 0;
-    top: 8vh;
-    background-color: #111;
-    color: #ccc;
-    height: 100%;
-    width: 20%;
-    display: flex;
-    flex-direction: column;
-    padding: 20px;
-  }
+#side-panel {
+  position: fixed;
+  left: 0;
+  top: 60px;
+  background-color: #111;
+  color: #ccc;
+  bottom: 0;
+  right: 80%;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  padding: 20px;
+}
 
-  #content {
-    flex: 1;
-    padding: 20px;
-    background-color: #444;
-    border-radius: 5px;
-  }
+#side-panel div {
+  display: flex;
+  flex-direction: column;
+}
 
+#searchEngine {
+  display: flex;
+  justify-content: right;
+  align-items: flex-start;
+  gap: 10px;
+  width: 40%;
+}
+
+#searchEngine img {
+  width: 35px;
+}
+
+#content {
+  flex: 1;
+  padding: 20px;
+  background-color: #444;
+  border-radius: 5px;
+}
+/*
   #main-panel {
     position: fixed;
     right: 0;
@@ -70,26 +101,70 @@ body {
     flex-direction: column;
     padding: 20px;
     overflow: auto;
-  }
+  }*/
 
-  button {
-    margin-bottom: 10px;
-    padding: 10px;
-    background-color: #222;
-    color: #ccc;
-    border: none;
-    border-radius: 5px;
-    cursor: pointer;
-  }
+#side-panel div button {
+  display: flex;
+  align-items: center;
+  margin-bottom: 10px;
+  padding: 10px;
+  background-color: #222;
+  color: #ccc;
+  border: none;
+  cursor: pointer;
+}
 
-  button:hover {
-    background-color: #444;
-  }
+#side-panel div button:hover {
+  background-color: #444;
+}
 
-  #title {
-    font-size: 24px;
-    font-weight: bold;
-    color: #ccc;
-    text-align: center;
-    margin: 10px 0;
-  }
+#title {
+  font-size: 24px;
+  font-weight: bold;
+  color: #ccc;
+  text-align: center;
+  margin: 10px 0;
+}
+
+#usernameBtn {
+  padding: 0;
+  margin: 0;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 10px;
+  height: 35px;
+  font-size: 18px;
+}
+
+#userPic {
+  width: 20px;
+  border: none;
+}
+
+#post-pannel {
+  display: flex;
+  flex-direction: column;
+  justify-content: start;
+  align-items: center;
+  position: fixed;
+  top: 60px;
+  left: 20%;
+  bottom: 0;
+  right: 0;
+  overflow: auto;
+
+}
+
+.post-boxes {
+  position: relative;
+  width: 90%;
+  margin-top: 15px;
+  margin-bottom: 15px;
+  background-color: rgba(255, 255, 255, 0.2);
+  padding: 30px 30px;
+  color: #fff;
+  text-shadow: 0 0 1px #111;
+  box-sizing: border-box;
+  line-height: 2;
+}
