worked on the UI of the main page
have done some changes such as formatting likes, and added the initial box for comments, as well as user settings are going to be done soon

--- a/frontend/app/home.css
+++ b/frontend/app/home.css
@@ -181,3 +181,16 @@ body {
 .likeButton:hover {
   filter: brightness(80%);
 }
+
+.like{
+  display: flex;
+  gap: 1%;
+  transform: translateY(-15px);
+
+}
+
+.like img{
+  width: 3%;
+  height: 3%;
+  
+}
