--- a/frontend/app/home.css
+++ b/frontend/app/home.css
@@ -202,3 +202,55 @@ body {
   height: 3%;
   
 }
+
+.commentBox{
+  width: 100%;
+  margin-top: 1%;
+  margin-bottom: 1%;
+}
+
+.commentHead{
+  border: solid 1px rgba(255, 255, 255, 0.2);
+}
+
+.commentContent{
+  margin-left: 20px;
+
+}
+
+.reply{
+  border: none;
+  font-size: 12px;
+  color: rgba(255, 255, 255, 0.8);
+  
+}
+
+.inputComment{
+  border: none;
+  border-radius: 10px 0 0 10px;
+  width: 80% !important;
+  padding: 3px 3px;
+}
+
+.inputCommentButton{
+  border: none;
+  border-radius: 0 10px 10px 0;
+  padding: 3px 10px;
+  background-color: #000;
+  color: #fff;
+  transition: .3s;
+  cursor: pointer;
+}
+
+.inputCommentButton:hover{
+  color: #000;
+  background-color: #fff;
+}
+
+.postDate{
+  font-size: 2vh;
+}
+
+.usernamePost{
+  font-size: 2.4vh;
+}
