--- a/frontend/app/home.css
+++ b/frontend/app/home.css
@@ -170,7 +170,7 @@ body {
   bottom: 0;
   right: 0;
   overflow: auto;
-
+  z-index: 1;
 }
 
 .post-boxes {
@@ -253,4 +253,25 @@ body {
 
 .usernamePost{
   font-size: 2.4vh;
+}
+
+#userSettingsBox{
+  background-color: rgb(0, 0, 0);
+  position: fixed;
+  top: 20%;
+  right: 20%;
+  width: 60%;
+  height: 60%;
+  z-index: 999;
+}
+
+#userPicSettings{
+  top: 20%;
+  right: 20%;
+  width: 100px;
+
+}
+
+#close{
+  float: right;
 }
