--- a/frontend/app/home.css
+++ b/frontend/app/home.css
@@ -150,11 +150,11 @@ body {
   border: none;
 }
 
-#userPic:hover{
+#userPic:hover {
   cursor: pointer;
 }
 
-#userSettings{
+#userSettings {
   border: none;
   background-color: transparent;
 }
@@ -190,72 +190,68 @@ body {
   filter: brightness(80%);
 }
 
-.like{
+.like {
   display: flex;
   gap: 1%;
   transform: translateY(-15px);
-
 }
 
-.like img{
+.like img {
   width: 3%;
   height: 3%;
-  
 }
 
-.commentBox{
+.commentBox {
   width: 100%;
   margin-top: 1%;
   margin-bottom: 1%;
 }
 
-.commentHead{
+.commentHead {
   border: solid 1px rgba(255, 255, 255, 0.2);
 }
 
-.commentContent{
+.commentContent {
   margin-left: 20px;
-
 }
 
-.reply{
+.reply {
   border: none;
   font-size: 12px;
   color: rgba(255, 255, 255, 0.8);
-  
 }
 
-.inputComment{
+.inputComment {
   border: none;
   border-radius: 10px 0 0 10px;
   width: 80% !important;
   padding: 3px 3px;
 }
 
-.inputCommentButton{
+.inputCommentButton {
   border: none;
   border-radius: 0 10px 10px 0;
   padding: 3px 10px;
   background-color: #000;
   color: #fff;
-  transition: .3s;
+  transition: 0.3s;
   cursor: pointer;
 }
 
-.inputCommentButton:hover{
+.inputCommentButton:hover {
   color: #000;
   background-color: #fff;
 }
 
-.postDate{
+.postDate {
   font-size: 2vh;
 }
 
-.usernamePost{
+.usernamePost {
   font-size: 2.4vh;
 }
 
-#userSettingsBox{
+#userSettingsBox {
   background-color: rgb(0, 0, 0);
   position: fixed;
   top: 20%;
@@ -263,15 +259,51 @@ body {
   width: 60%;
   height: 60%;
   z-index: 999;
+  display: flex;
+  flex-direction: column;
 }
 
-#userPicSettings{
+#userPicSettings {
   top: 20%;
   right: 20%;
-  width: 100px;
-
+  width: 12%;
 }
 
-#close{
+#userSettingsBox div:not(:first-child) {
+  margin-top: 1%;
+  margin-left: 10%;
+}
+
+#close {
+  position: relative;
+  width: 10%;
+  right: 0;
   float: right;
+}
+
+.searchBtn {
+  border: none;
+  border-radius: 100%;
+  height: 2.5vh;
+}
+
+.userN {
+  background: transparent;
+  width: 40%;
+  border: none;
+  outline: none;
+  border-bottom: 2px solid #fff;
+  transition: 0.5s;
+  font-size: 16px;
+  font-weight: 500;
+  color: #fff;
+  padding-right: 23px;
+}
+
+.addBtn {
+  border: none;
+  background-color: transparent;
+  color: #fff;
+  border: solid 1px #fff;
+  cursor: pointer;
 }
