--- a/frontend/app/home.css
+++ b/frontend/app/home.css
@@ -202,13 +202,17 @@ body {
 }
 
 .commentBox {
+  border: solid 1px rgb(150, 150, 150);
+  border-radius: 5px;
   width: 100%;
   margin-top: 1%;
   margin-bottom: 1%;
+  margin-right: 40px;
+  padding: 5px;
+  background-color: #444;
 }
 
 .commentHead {
-  border: solid 1px rgba(255, 255, 255, 0.2);
   align-items: center;
   display: flex;
   padding: 5px 5px;
@@ -218,6 +222,7 @@ body {
 
 .commentUsername {
   font-weight: bold;
+  margin-left: 6px;
   margin-right: 6px;
 }
 
@@ -227,7 +232,6 @@ body {
   border-radius: 100%;
   object-fit: cover;
   overflow: hidden;
-  margin-right: 5px;
 }
 
 .commentDate {
@@ -235,10 +239,49 @@ body {
 }
 
 .commentContent {
-  margin-left: 20px;
+  margin-left: 40px;
+}
+
+.replyText {
+  border: 1px solid #ddd;
+  border-radius: 5px;
+  font-size: 12px;
+  color: #ddd;
+  font-weight: bold;
+  padding: 0 5px;
+  user-select: none;
+}
+
+.replyText:hover {
+  cursor: pointer;
+  color: #fff;
+  border: 1px solid #fff;
+}
+
+.actionButtons {
+  display: flex;
+  gap: 5px;
+  align-items: center;
+}
+
+.deleteText {
+  border: 1px solid #ff5050;
+  border-radius: 5px;
+  font-size: 12px;
+  color: #ff5050;
+  font-weight: bold;
+  padding: 0 5px;
+  user-select: none;
+}
+
+.deleteText:hover {
+  cursor: pointer;
+  color: #ff9494;
+  border: 1px solid #ff9494;
 }
 
 .reply {
+  display: flex;
   border: none;
   font-size: 12px;
   color: rgba(255, 255, 255, 0.8);
@@ -268,10 +311,6 @@ body {
 
 .postDate {
   font-size: 2vh;
-}
-
-.usernamePost {
-  font-size: 2.4vh;
 }
 
 #userSettingsBox {
