--- a/frontend/app/home.css
+++ b/frontend/app/home.css
@@ -17,7 +17,7 @@ body {
 }
 
 #mainLogo {
-  width: 5%;
+  height: 40px;
   border: none;
   border-radius: 100%;
 }
@@ -27,7 +27,7 @@ body {
   left: 0;
   width: 98%;
   background-color: #222;
-  height: 9vh;
+  height: 60px;
   display: flex;
   justify-content: space-between;
   align-items: center;
@@ -42,16 +42,17 @@ body {
   display: flex;
   align-items: center;
   justify-content: left;
-  gap: 1%;
+  margin-left: 15px;
   width: 60%;
 }
 
 #search-box {
   width: 100%;
-  height: 2.5vh;
   padding: 8px;
   border: 1px solid #111;
   border-radius: 30px 30px 30px 30px;
+  background-color: #ffffff33;
+  color: #eee;
 }
 
 #main-container {
@@ -79,6 +80,7 @@ body {
 }
 
 #searchEngine {
+  margin-top: 6px;
   display: flex;
   justify-content: right;
   align-items: flex-start;
@@ -131,7 +133,6 @@ body {
   font-weight: bold;
   color: #ccc;
   text-align: center;
-  margin: 10px 0;
 }
 
 #usernameBtn {
@@ -178,7 +179,7 @@ body {
   width: 90%;
   margin-top: 15px;
   margin-bottom: 15px;
-  background-color: rgba(255, 255, 255, 0.2);
+  background-color: #ffffff33;
   padding: 30px 30px;
   color: #fff;
   text-shadow: 0 0 1px #111;
