--- a/frontend/app/home.css
+++ b/frontend/app/home.css
@@ -337,6 +337,7 @@ body {
   top: 20%;
   right: 20%;
   width: 12%;
+  border-radius: 1000000%;
 }
 
 #userSettingsBox div:not(:first-child) {
@@ -349,6 +350,14 @@ body {
   width: 10%;
   right: 0;
   float: right;
+  transition: .2s;
+  border:none;
+}
+
+#close:hover{
+  background-color: red;
+  color: #fff;
+  border: none;
 }
 
 .searchBtn {
@@ -383,4 +392,18 @@ body {
   color: #fff;
   border: solid 1px #fff;
   cursor: pointer;
+}
+
+
+#uploadBtn, #uploadFile{
+  border: 1px solid #fff;
+  background-color: transparent;
+  color: #fff;
+}
+
+#uploadBtn{
+  padding: 3px 10px;
+}
+.addBtn:hover, #uploadBtn:hover{
+  border: 0.5px solid #fff;
 }
