--- a/frontend/index.css
+++ b/frontend/index.css
@@ -24,9 +24,9 @@ body{
   width: 450px;
   height: 450px;
   background: transparent;
-  border: 2px solid #0ef;
+  border: 1px solid rgb(255, 255, 255);
   overflow: hidden;
-  box-shadow: 0 0 25px #0ef;
+  box-shadow: 0 0 5px rgb(255, 255, 255);
 }
 
 #wraper #form-box{
@@ -72,8 +72,30 @@ body{
 #input-box-username input:valid,
 #input-box-password input:focus,
 #input-box-password input:valid{
-  border-bottom-color: #0ef;
+  border-bottom-color: rgb(255, 255, 255);
 }
+/* Normal input field */
+#input-box-username input {
+  color: #fff;
+}
+
+/* Autofilled input field (Webkit browsers) */
+#input-box-username input:-webkit-autofill {
+  -webkit-text-fill-color: #fff !important; /* Set text color explicitly */
+  color: #fff !important;
+  caret-color: #fff !important;
+  background-color: #081b29 !important;
+  box-shadow: 0 0 0 100px #081b29 inset !important;
+}
+
+/* Autofilled input field (Firefox and IE browsers) */
+#input-box-username input:-moz-autofill,
+#input-box-username input:-ms-input-placeholder {
+  color: #fff !important;
+  caret-color: #fff !important; /* Set caret color explicitly */
+  background-color: #081b29 !important;
+}
+
 
 #input-box-username label, #input-box-password label, #input-box-username i, #input-box-password i{
   position: absolute;
@@ -97,7 +119,7 @@ body{
 #input-box-username input:valid~i,
 #input-box-password input:focus~i,
 #input-box-password input:valid~i{
-  color: #0ef;
+  color: rgb(255, 255, 255);
 }
 
 #input-box-username input:focus~label,
@@ -105,7 +127,7 @@ body{
 #input-box-password input:focus~label,
 #input-box-password input:valid~label{
   top: -5px;
-  color: #0ef;
+  color: rgb(255, 255, 255);
 }
 
 
@@ -115,7 +137,7 @@ body{
   width: 100%;
   height: 45px;
   background: transparent;
-  border: 2px solid #0ef;
+  border: 2px solid rgb(255, 255, 255);
   outline: none;
   border-radius: 40px;
   cursor: pointer;
@@ -133,7 +155,7 @@ body{
   top: -100%;
   left: 0;
   height: 300%;
-  background: linear-gradient(#081b29, #0ef, #081b29, #0ef);
+  background: linear-gradient(#081b29, rgb(255, 255, 255), #081b29, rgb(255, 255, 255));
   transition: .5s;
   z-index: -1;
 }
@@ -151,7 +173,7 @@ body{
 
 #reg-link{
   border: none;
-  color: #0ef;
+  color: rgb(255, 255, 255);
   background: transparent;
   font-size: 16px;
   text-decoration: none;
@@ -188,10 +210,10 @@ body{
   right: 0;
   width: 850px;
   height: 600px;
-  background: linear-gradient(45deg, #081b29, #0ef);
+  background: linear-gradient(45deg, #081b29, rgb(255, 255, 255));
   transform: rotate(10deg) skewY(40deg);
   transform-origin: bottom right;
-  border-bottom: 3px solid #0ef;
+  border-bottom: 3px solid rgb(255, 255, 255);
 }
 
 
