--- a/frontend/index.css
+++ b/frontend/index.css
@@ -217,15 +217,13 @@ body{
 }
 
 
-#help a{
-  position: fixed;
-  right: 1%;
-  bottom: 1%;
+#logreg-link a{
+  float: right;
   color: #fff;
   z-index: 999;
   text-decoration: none;
 }
 
-#help a:hover{
+#logreg-link a:hover{
   text-shadow: 0 0 3px #fff;
 }
