--- a/frontend/app/home.css
+++ b/frontend/app/home.css
@@ -322,7 +322,7 @@ body {
 }
 
 #userSettingsBox {
-  background-color: rgb(0, 0, 0);
+  background: linear-gradient(#444, #111);
   position: fixed;
   top: 20%;
   right: 20%;
@@ -354,7 +354,7 @@ body {
   border:none;
 }
 
-#close:hover{
+#close:hover, #logoutBtn:hover{
   background-color: red;
   color: #fff;
   border: none;
@@ -406,4 +406,11 @@ body {
 }
 .addBtn:hover, #uploadBtn:hover{
   border: 0.5px solid #fff;
+}
+
+#logoutBtn{
+  position: inherit;
+  width: 8%;
+  transition: .3s;
+  border:none;
 }
