--- a/frontend/app/home.css
+++ b/frontend/app/home.css
@@ -331,8 +331,17 @@ body {
   z-index: 999;
   display: flex;
   flex-direction: column;
+  box-shadow: 0 0 3px #a19999;
+  
+}
+/*
+#userSettingsBox div{
+  padding-left: 10%;
 }
 
+#userSettingsBox div:nth-child(2){
+  padding-top: 5%;
+}*/
 #userPicSettings {
   top: 20%;
   right: 20%;
@@ -341,8 +350,8 @@ body {
 }
 
 #userSettingsBox div:not(:first-child) {
-  margin-top: 1%;
-  margin-left: 10%;
+  margin-top: 20px;
+  margin-left: 120px;
 }
 
 #close {
