--- a/frontend/app/home.css
+++ b/frontend/app/home.css
@@ -345,7 +345,8 @@ body {
 #userPicSettings {
   top: 20%;
   right: 20%;
-  width: 12%;
+  width: 70px;
+  height: 70px;
   border-radius: 1000000%;
 }
 
