--- a/frontend/app/home.css
+++ b/frontend/app/home.css
@@ -289,12 +289,23 @@ body {
 }
 
 .reply {
-  display: flex;
+  background: transparent;
+  border-bottom: solid 1px #fff;
   border: none;
-  font-size: 12px;
-  color: rgba(255, 255, 255, 0.8);
 }
 
+.addReply{
+  border:none;
+  border-radius: 3px 3px 3px 3px;
+  background-color: #000;
+  color: #fff;
+  transition: .3s;
+  padding: 2px 10px;
+}
+
+.addReply:hover{
+  background-color: #222;
+}
 .inputComment {
   border: none;
   border-radius: 10px 0 0 10px;
